# posh

./: .gitignore  Cargo.toml  LICENSE  README.md  brainstorm.rs
.cargo/: config.toml
.github/workflows/: rust.yml
derive/: Cargo.toml
derive/src/: block.rs  const.rs  fragment.rs  fs_bindings.rs  fs_interface.rs  interpolant.rs  lib.rs  resource_interface.rs  to_value.rs  uniform.rs  uniform_bindings.rs  uniform_data.rs  uniform_interface.rs  utils.rs  value.rs  value_sl.rs  varying.rs  vertex.rs  vertex_data.rs  vertex_interface.rs  vs_bindings.rs  vs_interface.rs
examples/: .test.rs.swp  blowup.rs  deferred.rs  framebuffer.rs  hello_triangle.rs  hello_triangle_untyped.rs  instancing.rs  shader.rs  shadertoy.rs  shadow_map.rs  struct.rs  test.rs  test_shader_nonsense.rs  textured_cube.rs  type_scratch.rs  utils.rs
examples/resources/: teapot.csv
glace/: Cargo.toml
glace/src/: lib.rs  program.rs
macros/: Cargo.toml
macros/src/: def.rs  expose.rs  fields.rs  func.rs  into_posh.rs  into_val.rs  into_value.rs  lib.rs  rep.rs  struct_type.rs  transparent.rs
run-wasm/: Cargo.toml
src/: .lang.rs.swp  .value.rs.swp  build.rs  build_program_def.rs  compile.rs  dag.rs  expose.rs  gen.rs  gl.rs  interface.rs  lang.rs  lib.rs  numeric.rs  prelude.rs  program_def.rs  scope.rs  shader.rs  sl.rs  value.rs  var_form.rs
src/codegen/: glsl.rs  simplified_expr.rs  struct_registry.rs  var_form.rs
src/dag/: display.rs  expr.rs  ty.rs
src/expose/: built_in_value.rs  compile.rs  expr_reg.rs  gen_val.rs  gen_value.rs  nalgebra.rs  primitives.rs  sampler.rs  scalar.rs  trace.rs  tuple.rs  vec.rs
src/gl/: buffer.rs  context.rs  draw_params.rs  element_buffer.rs  enums.rs  error.rs  framebuffer.rs  geometry_stream.rs  geometry_type.rs  image.rs  mat.rs  primitive_stream.rs  program.rs  raw.rs  sampler.rs  surface.rs  texture.rs  uniform_buffer.rs  untyped.rs  vec.rs  vertex_array.rs  vertex_binding.rs  vertex_buffer.rs  vertex_data.rs  vertex_spec.rs  vertex_stream.rs
src/gl/raw/: buffer.rs  caps.rs  context.rs  disjoint_timer_query.rs  draw_params.rs  draw_settings.rs  error.rs  framebuffer.rs  image.rs  params.rs  primitive_stream.rs  program.rs  sampler_params.rs  sampler_settings.rs  settings.rs  texture.rs  tracing.rs  vertex_array.rs  vertex_layout.rs  vertex_spec.rs  vertex_stream.rs
src/gl/untyped/: buffer.rs  capabilities.rs  context.rs  geometry_stream.rs  image.rs  program.rs  texture.rs  vertex_array.rs  vertex_binding.rs  vertex_data.rs  vertex_stream.rs
src/interface/: block.rs  fragment.rs  fs_interface.rs  gl.rs  gl_view.rs  logical.rs  numeric.rs  physical.rs  sl.rs  sl_view.rs  tests.rs  uniform.rs  uniform_interface.rs  vertex.rs  vs_interface.rs
src/lang/: defs.rs  expr_reg.rs  scope.rs  show.rs  visit.rs
src/scope/: show.rs
src/shader/: erased.rs  fields.rs  resource.rs  show.rs  stage.rs  vertex.rs
src/sl/: array.rs  codegen.rs  dag.rs  gen_type.rs  interpolant.rs  mat.rs  primitives.rs  program_def.rs  sampler.rs  scalar.rs  shader.rs  sig.rs  transpile.rs  tuple.rs  varying.rs  vec.rs
src/sl/codegen/: scope_form.rs  simplified_expr.rs  struct_registry.rs  tests.rs  var_form.rs
src/sl/dag/: display.rs  expr.rs  trace.rs  ty.rs
src/value/: domain.rs  funcs.rs  gen_val.rs  mod.rs  primitives.rs  sampler.rs  scalar.rs  trace.rs  tuple.rs  vec.rs
src/var_form/: show.rs  struct_defs.rs
tests/: derive.rs
