[package]
name = "posh"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
posh-derive = { path = "derive" }

sealed = "0.4.0"
log = "0.4.17"
thiserror = "1.0.38"
bytemuck = { git = "https://github.com/leod/bytemuck", branch = "specify_crate_in_derive", features = ["derive"] }
crevice = { git = "https://github.com/leod/crevice", branch = "specify_crate_in_derive" }
glow = "0.11.2"
mint = { version = "0.5.9", optional = true }
glam = { version = "0.24.2", optional = true }
fxhash = "0.2"

[workspace]
members = ["derive", "run-wasm"]

[features]
# FIXME: These features are enabled by default only for testing.
default = ["glam", "mint"]

[dev-dependencies]
glam = { version = "0.24.2" }
image = "0.24.5"
nanorand = "0.7.0"
simple_logger = "4.1.0"
instant = "0.1.12"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
sdl2 = "0.35.2"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
console_log = "1"
winit = "0.28.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"

[target.'cfg(target_family = "wasm")'.dev-dependencies.web-sys]
version = "0.3.22"
features = [
    'CanvasRenderingContext2d',
    'Screen',
    'ScreenOrientation',
    'OrientationLockType',
]