[package]
name = "posh"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
posh-derive = { path = "derive" }

bytemuck = { git = "https://github.com/leod/bytemuck", branch = "specify_crate_in_derive", features = ["derive"] }
crevice = { git = "https://github.com/leod/crevice", branch = "specify_crate_in_derive" }
fxhash = "0.2"
glam = { version = "0.27.0", optional = true }
glow = "0.13.0"
log = "0.4.17"
mint = { version = "0.5.9", optional = true }
sealed = "0.4.0"
smallvec = "1.13.2"
thiserror = "1.0.38"

[workspace]
members = ["derive", "run-wasm"]

[features]
# FIXME: These features are enabled by default only for testing.
default = ["glam", "mint"]

[dev-dependencies]
glam = "0.27.0"
image = "0.24.5"
instant = "0.1.12"
nanorand = "0.7.0"
simple_logger = "4.1.0"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
sdl2 = "0.35.2"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
winit = "0.28.6"

[target.'cfg(target_family = "wasm")'.dev-dependencies.web-sys]
version = "0.3.22"
features = [
    'CanvasRenderingContext2d',
    'OrientationLockType',
    'Screen',
    'ScreenOrientation',
]
