[package]
name = "posh"
version = "0.1.0-alpha.1"
edition = "2021"

[dependencies]
posh-derive = { path = "derive" }

bytemuck = { version = "1.24", features = ["derive"] }
crevice = { git = "https://github.com/leod/crevice", branch = "specify_crate_in_derive" }
fxhash = "0.2"
glam = { version = "0.30.9", optional = true }
glow = { git = "https://github.com/grovesNL/glow", rev = "aa4238a60d17076b917eaa1ec662e5080df42b0a" }
log = "0.4.28"
mint = { version = "0.5.9", optional = true }
sealed = "0.6.0"
smallvec = "1.15.1"
thiserror = "1.0.69"

[workspace]
members = ["derive", "run-wasm"]

[features]
# FIXME: These features are enabled by default only for examples.
# We should clean this up.
default = ["glam", "mint"]

[dev-dependencies]
expect-test = "1.5.1"
glam = "0.30.9"
image = "0.25.8"
instant = "0.1.13"
nanorand = { version = "0.8.0", features = ["getrandom"] }
simple_logger = "5.1.0"

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
sdl2 = "0.38.0"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.55"
winit = "0.28.7"

[target.'cfg(target_family = "wasm")'.dev-dependencies.web-sys]
version = "0.3.82"
features = [
    'CanvasRenderingContext2d',
    'OrientationLockType',
    'Screen',
    'ScreenOrientation',
]
