[package]
name = "posh-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] } # TODO: minimize features once we know what we need.
quote = "1.0.3"
proc-macro2 = "1.0.1"

[dependencies.uuid]
version = "1.1.0"
features = ["v4"]
